--- a/configure.ac
+++ b/configure.ac
@@ -35,6 +35,10 @@ else
 fi
 AC_SUBST(plugindir)
 
+dnl set proper LDFLAGS for plugins
+GST_PLUGIN_LDFLAGS='-module -avoid-version -export-symbols-regex [_]*\(gst_\|Gst\|GST_\).*'
+AC_SUBST(GST_PLUGIN_LDFLAGS)
+
 AC_CONFIG_FILES([
 Makefile
 m4/Makefile
